<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_one"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_two"
        android:gravity="center"/>

    <Button
        android:id="@+id/bt_to_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_english"/>

    <Button
        android:id="@+id/bt_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_default"/>

    <Button
        android:id="@+id/bt_another_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_another_activity"/>

</LinearLayout>
